fix jump bug on other pages

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ h2, h3, h4 {
 	margin-bottom: 0px;
 }
 
-.experience {
+.experience, .publication, .presentation {
 	margin-bottom: 12.5px;
 }
 
